<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">DaneCreteil</string>
    <string name="accueil">Accueil</string>
    <string name="message_version">Version V1-admin-2017</string>
    <string name="message_accueil">Bienvenue sur l\'application de gestion des animateurs de la DANE de Créteil</string>
    <string name="annuaire_etabs">Etablissements par Département</string>
    <string name="recherche_personnel">Rechercher un personnel administratif</string>
    <string name="recherche_etab">Rechercher un établissement par nom</string>
    <string name="recherche_etablissement_par_animateur">Etablissements par animateur </string>
    <string name="liste_animateurs">Liste des animateurs </string>
    <string name="titre_villes_activity">Villes Par Département</string>
    <string name="titre_detail_activity">Information sur  l\'établissement</string>
    <string name="titre_etabs_activity">Etablissement par Ville</string>

    <string name="dep77">Seine et Marne</string>
    <string name="dep93">Seine Saint Denis</string>
    <string name="dep94">Val de Marne</string>

    <string name="action_share">partager</string>
    <string name="action_call">Appeler</string>
    <string name="action_map">Y aller</string>
    <string name="action_mail">envoyer un mail</string>
    <string name="action_rafraichir">Synchroniser</string>
    <string name="action_maj">mise à jour</string>

    <string name="pref_depart_label">Département</string>
    <string name="pref_depart_key" translatable="false">depart</string>
    <string name="pref_depart_default" translatable="false">93</string>
    <string name="pref_depart_label_default" translatable="false">Seine Saint Denis</string>

    <string name="pref_depart_label_93">Seine Saint Denis</string>
    <string name="pref_depart_label_94">Val de Marne</string>
    <string name="pref_depart_label_77">Seine et Marne</string>

    <string name="pref_depart_77" translatable="false">77</string>
    <string name="pref_depart_93" translatable="false">93</string>
    <string name="pref_depart_94" translatable="false">94</string>

    <string name="format_departement"><xliff:g id="depart">%1$s</xliff:g>!</string>
    <string name="format_adresse">Adresse : <xliff:g id="adresse">%1$s</xliff:g></string>
    <string name="format_ville">Liste des villes en : <xliff:g id="villes">%1$s</xliff:g></string>
    <string name="format_etab">Liste des établissements de :<xliff:g id="etabs">%1$s</xliff:g></string>
    <string name="format_detail_etab">Informations sur l\'établissement :<xliff:g id="detailetabs">%1$s</xliff:g></string>
    <string name="action_departement">Département</string>
    <string name="title_parametres_activity">Département par défault</string>
    <string name="message_etabs">Nom de l\'établissement</string>
    <string name="label_recherche_etab_par_nom">Nom de l\'établissement à rechercher</string>
    <string name="label_recherche_personnel_par_nom">Nom du personnel administratif</string>
    <string name="label_recherche_anim_par_nom">Nom de l\'animateur</string>
    <!-- SyncAdapter related -->
    <string name="sync_account_type">bouami.fr</string>
    <string name="content_authority">com.creteil.com.danecreteil.app</string>
</resources>