<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_accueil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.creteil.com.danecreteil.app.AccueilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_accueil"
        android:text="@string/message_accueil"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:textStyle="normal|bold|italic"
        tools:textSize="18sp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingBottom="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        android:theme="@style/AppTheme">

        <Button
            android:text="@string/annuaire_etabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/annuaire_etabs" />

        <Button
            android:text="@string/recherche_etab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recherche_etab" />

        <Button
            android:text="@string/recherche_personnel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recherche_personnel" />

        <Button
            android:text="@string/recherche_etablissement_par_animateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recherche_etablissement_par_animateur" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_version"
        android:text="@string/message_version"
        android:textAlignment="center"
        android:textStyle="normal|bold|italic"
        tools:textSize="8sp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
