<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/liste_departement">

        <RadioButton
            android:text="@string/dep77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dep77"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dep93"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dep93"
            android:layout_weight="1"
            android:checked="false" />

        <RadioButton
            android:text="@string/dep94"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dep94"
            android:layout_weight="1" />
    </RadioGroup>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/liste_villes"
        android:layout_marginTop="10dp" />
</LinearLayout>